cambiando el nombre del repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "one-portfolio",
-  "homepage": "https://Jhoseb29.github.io/Portafolio-V3",
+  "homepage": "https://Jhoseb29.github.io/Jose-Moya",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
