--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "gh-pages": "^4.0.0",
+    "local-storage-fallback": "^4.1.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
@@ -18,6 +19,8 @@
     "react-on-screen": "^2.1.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "styled-components": "^5.3.5",
+    "styled-theming": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
