--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gh-pages": "^4.0.0",
     "local-storage-fallback": "^4.1.2",
     "react": "^18.1.0",
+    "react-animated-cursor": "^2.5.1",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.1.0",
